# sle_app

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
broker/: .env.example  .gitignore  README.md  pyproject.toml
broker/app/: __init__.py  config.py  main.py  middleware.py  openai_service.py  passkeys.py  schemas.py  security.py  store.py
broker/tests/: conftest.py  test_ai_routes.py  test_security.py
docs/design/: objectif-c-ecrans-android.dc.html
docs/plans/: 2026-07-12-p0-implementation-plan.md  2026-07-13-p4-web-plan.md
docs/security/: p4-web-security-checklist.md
sle_prep/: README.md  pubspec.yaml
sle_prep/android/: key.properties.example  settings.gradle.kts
sle_prep/android/app/: build.gradle.kts
sle_prep/assets/seed/: curriculum.json  drills_core.json  oral_core.json  reading_core.json  vocab_core.json
sle_prep/lib/: app.dart  main.dart  providers.dart
sle_prep/test/: widget_test.dart
sle_prep/test/db/: dao_test.dart  schema_v2_test.dart  schema_v3_test.dart  schema_v4_test.dart  schema_v5_migration_test.dart
sle_prep/test/features/: drill_screen_test.dart  oral_report_test.dart  realtime_interview_screen_test.dart
sle_prep/test/llm/: drill_generator_test.dart  llm_client_test.dart  oral_coach_test.dart  reading_generator_test.dart  writing_coach_test.dart
sle_prep/tool/: finalize_pwa.dart  pwa_build_support.dart  validate_pwa.dart
sle_prep/web/: flutter_bootstrap.js  index.html  manifest.json  passkeys.js  sle_prep_sw.js
(+50 files in other folders)
