[project]
name = "sle-prep-broker"
version = "0.1.0"
description = "Authenticated, budget-limited OpenAI broker for SLE Prep Web"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
  "webauthn>=2.7,<4",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "respx>=0.22,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
